<resources>
    <string name="app_name">DieRoller</string>
    <string name="hello_world">Hello world!</string>
    <string name="type_of_die">Number of sides:</string>
    <string-array name="number_of_sides_string">
        <item>3</item>
        <item>4</item>
        <item>6</item>
        <item>8</item>
        <item>10</item>
        <item>12</item>
        <item>20</item>
        <item>100</item>
    </string-array>
    <string-array name="difficulty_string">
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string name="number_of_die">Dice pool:</string>
    <string name="result">Result:</string>
    <string name="roll">Roll!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_menu">Dice Roller</string>
    <string name="generic">Generic</string>
    <string name="nwod">nWoD</string>
    <string name="owod">oWoD</string>
    <string name="shadowrun5">Shadowrun 5th</string>
    <string name="d20">D20</string>
    <string name="title_activity_owod">Old WoD Dice Roller</string>
    <string name="difficulty">Difficulty:</string>
    <string name="threshold">Threshold:</string>
    <string name="willpower">Willpower</string>
    <string name="specialization">Specialization</string>
    <string name="success">success!</string>
    <string name="Success">Success!</string>
    <string name="success_plural">successes!</string>
    <string name="failure">Failure!</string>
    <string name="glitch">Glitch!</string>
    <string name="criticalfailure">CRITICAL FAILURE!</string>
    <string name="title_activity_d20">D20 Dice Roller</string>
    <string name="title_activity_main">Generic Dice Roller</string>
    <string name="difficulty_class">Difficulty Class:</string>
    <string name="roll_d20">Roll d20!</string>
    <string name="damage">Damage:</string>
    <string name="modifier">Modifier:</string>
    <string name="title_activity_shadowrun5th">Shadowrun5th Dice Roller</string>
    <string name="initiative">Initiative:</string>
    <string name="roll_init">Roll Initiative!</string>
    <string name="title_activity_nwod">nWoD Dice Roller</string>
    <string name="chance_die">Chance Die</string>

</resources>
