<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.rafael.dieroller.MenuActivity"
    android:background="#ff000000">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/generic"
        android:id="@+id/button1"
        android:onClick="OpenMain"
        android:width="300dp"
        android:height="60dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="76dp" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nwod"
        android:id="@+id/button2"
        android:width="300dp"
        android:onClick="OpenNwod"
        android:height="60dp"
        android:layout_below="@+id/button1"
        android:layout_centerHorizontal="true" />

        <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/owod"
        android:id="@+id/button3"
            android:onClick="OpenOwod"
            android:width="300dp"
            android:height="60dp"
            android:layout_below="@+id/button2"
            android:layout_centerHorizontal="true" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shadowrun5"
        android:id="@+id/button4"
        android:width="300dp"
        android:onClick="OpenShadowrun5"
        android:height="60dp"
        android:layout_below="@+id/button3"
        android:layout_centerHorizontal="true" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/d20"
        android:id="@+id/button5"
        android:onClick="OpenD20"
        android:width="300dp"
        android:height="60dp"
        android:layout_below="@+id/button4"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
