<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.rafael.dieroller.OwodActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/number_of_die"
        android:id="@+id/number_of_die"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/number_of_die_input"
        android:layout_marginLeft="91dp"
        android:layout_marginStart="91dp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/number_of_die"
        android:layout_toEndOf="@+id/number_of_die" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/difficulty"
        android:id="@+id/diff"
        android:layout_marginTop="23dp"
        android:layout_below="@+id/number_of_die_input"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/diff_input"
        android:layout_alignTop="@+id/diff"
        android:layout_toEndOf="@+id/diff"
        android:layout_alignLeft="@+id/number_of_die_input"
        android:layout_alignStart="@+id/number_of_die_input"
        android:spinnerMode="dialog" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/threshold"
        android:id="@+id/threshold"
        android:layout_below="@+id/diff_input"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/threshold_input"
        android:layout_alignTop="@+id/threshold"
        android:layout_alignLeft="@+id/diff_input"
        android:layout_alignStart="@+id/diff_input" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/willpower"
        android:id="@+id/willcheckbox"
        android:layout_above="@+id/speccheckbox"
        android:layout_alignLeft="@+id/speccheckbox"
        android:layout_alignStart="@+id/speccheckbox" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/specialization"
        android:id="@+id/speccheckbox"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/result_display"
        android:layout_alignStart="@+id/result_display" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/result"
        android:id="@+id/result"
        android:layout_below="@+id/willcheckbox"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="70dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="XXXXXXXXX"
        android:id="@+id/result_display"
        android:layout_below="@+id/result"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="65dp" />
</RelativeLayout>
