<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.rafael.dieroller.NwodActivity"
    android:background="#ff000000">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/number_of_die"
        android:id="@+id/number_of_dice"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="43dp"
        android:textColor="#ffffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/modifier"
        android:id="@+id/modifier"
        android:layout_below="@+id/number_of_dice"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="67dp"
        android:textColor="#ffffffff" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/number_of_dice_input"
        android:layout_above="@+id/modifier"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="34dp"
        android:layout_marginEnd="34dp"
        android:width="70dp"
        android:text="1"
        android:textColor="#ffffffff"
        android:backgroundTint="#ff7f7f7f" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/modifier_input"
        android:width="70dp"
        android:layout_alignBottom="@+id/modifier"
        android:layout_alignRight="@+id/number_of_dice_input"
        android:layout_alignEnd="@+id/number_of_dice_input"
        android:text="0"
        android:textColor="#ffffffff"
        android:backgroundTint="#ff7f7f7f" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/roll"
        android:id="@+id/roll"
        android:layout_below="@+id/modifier"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:onClick="Roll" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chance_die"
        android:id="@+id/rollchance"
        android:layout_marginTop="46dp"
        android:layout_below="@+id/roll"
        android:layout_centerHorizontal="true"
        android:onClick="RollChanceDie" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/result"
        android:id="@+id/result"
        android:layout_marginTop="38dp"
        android:layout_below="@+id/rollchance"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#ffffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text=" "
        android:id="@+id/result_display"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/result"
        android:layout_alignLeft="@+id/rollchance"
        android:layout_alignStart="@+id/rollchance"
        android:textColor="#ffffffff" />

</RelativeLayout>
