<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.rafael.dieroller.Shadowrun5thActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/number_of_die"
        android:id="@+id/number_of_die"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/number_of_die_input"
        android:layout_marginRight="50dp"
        android:layout_marginEnd="50dp"
        android:width="70dp"
        android:layout_alignBottom="@+id/number_of_die"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/threshold"
        android:id="@+id/threshold"
        android:layout_below="@+id/number_of_die"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="44dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/threshold_input"
        android:width="70dp"
        android:layout_alignBottom="@+id/threshold"
        android:layout_alignRight="@+id/number_of_die_input"
        android:layout_alignEnd="@+id/number_of_die_input"
        android:text="1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/roll"
        android:id="@+id/roll"
        android:layout_marginTop="27dp"
        android:layout_below="@+id/threshold_input"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/number_of_die"
        android:id="@+id/number_of_die_init"
        android:layout_marginTop="24dp"
        android:layout_below="@+id/roll"
        android:layout_alignRight="@+id/threshold"
        android:layout_alignEnd="@+id/threshold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/initiative"
        android:id="@+id/initiative"
        android:layout_marginTop="55dp"
        android:layout_below="@+id/number_of_die_init"
        android:layout_alignRight="@+id/number_of_die"
        android:layout_alignEnd="@+id/number_of_die" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/number_of_die_init_input"
        android:width="70dp"
        android:layout_above="@+id/initiative"
        android:layout_alignRight="@+id/threshold_input"
        android:layout_alignEnd="@+id/threshold_input" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/initiative_input"
        android:width="70dp"
        android:layout_alignBottom="@+id/initiative"
        android:layout_alignRight="@+id/number_of_die_init_input"
        android:layout_alignEnd="@+id/number_of_die_init_input" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/roll_init"
        android:id="@+id/roll_init"
        android:layout_marginTop="27dp"
        android:layout_below="@+id/initiative_input"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/result"
        android:id="@+id/result"
        android:layout_marginTop="47dp"
        android:layout_below="@+id/roll_init"
        android:layout_alignLeft="@+id/number_of_die_init"
        android:layout_alignStart="@+id/number_of_die_init" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/result_display"
        android:layout_alignBottom="@+id/result"
        android:layout_alignRight="@+id/initiative_input"
        android:layout_alignEnd="@+id/initiative_input" />
</RelativeLayout>
