<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:clickable="false"
    android:background="#ff000000">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/type_of_die"
        android:id="@+id/type_of_die"
        android:layout_marginTop="42dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#ffffffff" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/number_of_sides_input"
        android:layout_alignTop="@+id/type_of_die"
        android:layout_toRightOf="@+id/type_of_die"
        android:layout_toEndOf="@+id/type_of_die"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:nestedScrollingEnabled="false"
        android:spinnerMode="dialog"
        android:focusableInTouchMode="false"
        android:background="#ffffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/number_of_die"
        android:id="@+id/number_of_die"
        android:layout_below="@+id/number_of_sides_input"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="33dp"
        android:textColor="#ffffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/result"
        android:id="@+id/result"
        android:layout_marginTop="70dp"
        android:layout_below="@+id/number_of_die"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#ffffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/result_display"
        android:singleLine="false"
        android:nestedScrollingEnabled="true"
        android:layout_below="@+id/result"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:textColor="#ffffffff" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/roll"
        android:id="@+id/roll_button"
        android:onClick="Roll"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/number_of_die_input"
        android:layout_alignLeft="@+id/number_of_sides_input"
        android:layout_alignStart="@+id/number_of_sides_input"
        android:layout_alignBottom="@+id/number_of_die"
        android:editable="false"
        android:textColor="#ffffffff"
        android:width="75dp"
        android:backgroundTint="#ff7f7f7f"
        android:text="0" />

</RelativeLayout>
